# wordclock

./: .gitignore  README.md  blank.py  clock-startup-script.service  clock-ui-script.service  clock_start.sh  clock_updater.py  config.sh  data_update.py  face document.pages  faces.py  installer_script.sh  ledcontrol.py  license.txt  live_simulation.py  local_config.json  matrix-startup-script.service  matrix_common.py  matrix_display.py  matrix_modes.py  matrix_start.sh  mocklights.py  modes.py  mypy.ini  prompts.txt  pyproject.toml  qrcode.py  readconfig.py  run_clock.py  setdate.py  terminal_version.py  timesayer.py  ui_backend.py  ui_start.sh  updater.sh  wificonfig.py
3dmodels/: Back Enclosure.stl  Clock Face.stl  Face and Matrix OpenSCAD.scad  Matrix Grid.stl
backups/: readme.txt
config/: config.sh  local_config.json  local_config.sh  spidev.conf
configurations/: colors.py  sand_sim.py  weather.py
docs/: Test wifi details.pages  Wiring Diagram.key  face document.pages
scripts/: clock_start.sh  configure_network.sh  getip.sh  installer_script.sh  matrix_start.sh  ui_start.sh  update_system.sh  updater.sh  validate.sh
services/: clock-startup-script.service  clock-ui-script.service  clock-updater-script.service  matrix-startup-script.service
templates/: config.html
test/: test_matrix_common.py  test_matrix_display.py  test_matrix_modes.py  test_timesayer.py  test_utils.py
utils/: blank.py  ledcontrol.py  qrcode.py  readconfig.py
