[project]
name = "wordclock"
version = "0.1.0"
description = "Module to allow control of a clock that shows the time in words"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.13",
    "blessed>=1.21.0",
    "click>=8.2.1",
    "flask>=3.1.1",
]

[project.optional-dependencies]
# Only needed if the actual hardware is present
hardware_present = [
    "gpiozero>=2.0.1",
    "lgpio>=0.2.2.0; sys_platform == 'linux'",
    "pi5neo>=1.0.6; sys.platform == 'linux'",
]
