[project]
name = "wordclock"
version = "0.1.0"
description = "Module to allow control of a clock that shows the time in words"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.13",
    "blessed>=1.21.0",
    "click>=8.2.1",
    "flask>=3.1.1",
    "pytest>=8.4.1",
]

[dependency-groups]
# Only needed if the actual hardware is present
hardware = [
    "gpiozero>=2.0.1",
    "lgpio>=0.2.2.0; sys_platform == 'linux'",
    "pi5neo>=1.0.6; sys.platform == 'linux'",
]


# Only needed if you want to use the custom date updater
updater = [
    "requests>=2.32.4",
    "paramiko",
]


# Only needed if you want to use the camera
camera = [
    "python-resize-image>=1.1.20",
]
